# predictbot

./: .gitignore  Cargo.toml  LICENSE  README.md  RUN_LOCAL.md
decisions/: ledger.jsonl
docs/: DAY2.md  FINDINGS.md  PROGRESS.md
frontend/: package-lock.json  package.json
frontend/app/: client-providers.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: BetPanel.tsx  MyPositions.tsx
frontend/lib/: api.ts  transactions.ts
move/: DEPLOYMENT.md  Move.toml  Published.toml
move-spec/: .gitignore  HOW_TO_VERIFY.md  Move.toml  sui-prover.log.2026-06-08
move-spec/output/: accumulator_spec::accumulator_address_spec.log.txt  accumulator_spec::emit_deposit_event_spec.log.txt  accumulator_spec::emit_withdraw_event_spec.log.txt  address_spec::from_bytes_spec.log.txt  address_spec::from_u256_spec.log.txt  address_spec::to_u256_spec.log.txt  bls12381_spec::bls12381_min_pk_verify_spec.log.txt  bls12381_spec::bls12381_min_sig_verify_spec.log.txt  config_spec::read_setting_impl_spec.log.txt  crypto_hash_spec::blake2b256_spec.log.txt  crypto_hash_spec::keccak256_spec.log.txt  debug_spec::print_spec.log.txt  debug_spec::print_stack_trace_spec.log.txt  derived_object_spec::derive_address_spec.log.txt  ecdsa_k1_spec::decompress_pubkey_spec.log.txt  ecdsa_k1_spec::secp256k1_ecrecover_spec.log.txt  ecdsa_k1_spec::secp256k1_keypair_from_seed_spec.log.txt  ecdsa_k1_spec::secp256k1_sign_spec.log.txt  ecdsa_k1_spec::secp256k1_verify_spec.log.txt  (+65 more)
scripts/: deepedge_ai.py  deepedge_loop.py  deepedge_loop2.py  deepedge_loop_api.py
src/: lib.rs  main.rs
(+28 files in other folders)
