[package]
name = "deepedge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deepedge-server"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dotenv = "0.15"

# Statistics (normal CDF for option pricing)
statrs = "0.17"

[profile.release]
opt-level = 3
lto = true
